Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13277

Wrong caption of progress bar for "git status"

XMLWordPrintable

    • d301fb42e91765ae829f7021c3b26ef159cadc9a

      1. Open a file from a large git repository, e.g. Creator's repository.
      2. Select "Tools" -> "Git" -> "Local Repository" -> "Status" from the menu.
        You'll see a progress bar with the label "git -c":

      This should be "Git status" instead. Other commands work correctly, e.g. "git fetch".

        1. gitstatus.png
          3 kB
          Robert Löhning
        For Gerrit Dashboard: QTCREATORBUG-13277
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes